# rORAM

./: .gitignore  CMakeLists.txt  Makefile  README.md  roram_main
include/roram/: README.md  bit_reverse.hpp  block.hpp  crypto.hpp  path_oram.hpp  position_map.hpp  roram.hpp  storage.hpp  sub_oram.hpp  types.hpp
scripts/: benchmark_matrix.sh  replay_trace_workload.sh  replicate_ndss2019_largescale_ssd.sh  replicate_ndss2019_ssd.sh  replicate_ndss2019_workload.sh
src/: README.md  block.cpp  crypto.cpp  main.cpp  path_oram.cpp  position_map.cpp  roram.cpp  storage_file.cpp  storage_mem.cpp  sub_oram.cpp  types.cpp
tests/: basic_tests.cpp
